# compilerbook-interpreter-rust

./: .gitignore  Cargo.toml
src/: lexer.rs  lib.rs  main.rs  repl.rs  stuff.rs  token.rs
src/ast/: block_statement.rs  boolean_expression.rs  call_expression.rs  expression.rs  expression_node.rs  expression_statement.rs  fn_literal.rs  identifier.rs  if_expression.rs  infix_expression.rs  integer_literal.rs  let_statement.rs  mod.rs  node.rs  operators.rs  parse_fn.rs  parser.rs  prefix_expression.rs  program.rs  return_statement.rs  statement.rs  statement_node.rs  token_node.rs  trace.rs
src/evaluator/: evaluate.rs  evaluate_infix_expression.rs  mod.rs
src/object/: bool.rs  integer.rs  mod.rs  null.rs  object.rs  object_trait.rs  return_value.rs  truthiness_trait.rs
src/parser/: mod.rs  parse_call_arguments.rs  parse_call_expression.rs  parse_let_statement.rs  parse_return_statement.rs  parser.rs
tests/: bang_operator_test.rs  evaluate_bool_test.rs  evaluate_integer_test.rs  if_else_expression_test.rs  return_value_test.rs  shared.rs  test_integer_object.rs
