[package]
name = "interpreter"
version = "0.1.0"
authors = ["Eric Hulburd <ehulburd@rigetti.com>"]
edition = "2018"

[lib]
name = "interpreter"
path = "src/lib.rs"

[[bin]]
name = "repl"
path = "src/repl.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
users = "0.11.0"
scopeguard = "^1.1.0"
